unpackaged/main/default/objects/On_site_agreement__c/On_site_agreement__c.object-meta.xml
<CustomObject>
    <label>On Site Agreement</label>
    <nameField>
        <displayFormat>ONSA-{000000}</displayFormat>
        <label>On Site agreement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On Site Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>