unpackaged/main/default/objects/On_site_agreement__c/fields/Accepted_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Emails_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be ticked if the emails when the ONSA is accepted have been sent and prevent them being sent again.</description>
    <inlineHelpText>Should be ticked if the emails when the ONSA is accepted have been sent and prevent them being sent again.</inlineHelpText>
    <label>Accepted Emails Sent</label>
    <type>Checkbox</type>
</CustomField>