unpackaged/main/default/objects/On_site_agreement__c/fields/Additional_email__c.field-meta.xml
<CustomField>
    <fullName>Additional_email__c</fullName>
    <label>Additional email</label>
    <type>Email</type>
</CustomField>