unpackaged/main/default/objects/On_site_agreement__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Fee</label>
    <type>Checkbox</type>
</CustomField>