unpackaged/main/default/objects/On_site_agreement__c/fields/Allocated_engineer__c.field-meta.xml
<CustomField>
    <fullName>Allocated_engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>On_site_agreements</relationshipName>
    <type>Lookup</type>
</CustomField>