unpackaged/main/default/objects/On_site_agreement__c/fields/Allocated_engineer_email__c.field-meta.xml
<CustomField>
    <fullName>Allocated_engineer_email__c</fullName>
    <label>Allocated engineer email</label>
    <type>Email</type>
</CustomField>