unpackaged/main/default/objects/On_site_agreement__c/fields/Asperato_Authorisation_Request__c.field-meta.xml
<CustomField>
    <fullName>Asperato_Authorisation_Request__c</fullName>
    <label>Asperato Authorisation Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>