unpackaged/main/default/objects/On_site_agreement__c/fields/Complaint_Notes__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Notes__c</fullName>
    <description>Notes on the complaint</description>
    <inlineHelpText>Notes on the complaint</inlineHelpText>
    <label>Complaint/Review Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>