unpackaged/main/default/objects/On_site_agreement__c/fields/Complaint_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Outcome__c</fullName>
    <label>Complaint Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Complaint_Outcome</valueSetName>
    </valueSet>
</CustomField>