unpackaged/main/default/objects/On_site_agreement__c/fields/Complaint_Raised__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked if a complaint has been raised</description>
    <inlineHelpText>To be ticked if a complaint has been raised</inlineHelpText>
    <label>Complaint Raised?</label>
    <type>Checkbox</type>
</CustomField>