unpackaged/main/default/objects/On_site_agreement__c/fields/Complaint_Related_to_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Related_to_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint Related to Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>On Site Agreements (Complaint Related to Engineer)</relationshipLabel>
    <relationshipName>On_Site_Agreements_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>