unpackaged/main/default/objects/On_site_agreement__c/fields/Complaint_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked when the complaint has been resolved</description>
    <inlineHelpText>To be ticked when the complaint has been resolved</inlineHelpText>
    <label>Complaint Resolved</label>
    <type>Checkbox</type>
</CustomField>