unpackaged/main/default/objects/On_site_agreement__c/fields/Complaint_Waiting_On__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Waiting_On__c</fullName>
    <label>Complaint Waiting On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Complaint_Waiting_On</valueSetName>
    </valueSet>
</CustomField>