unpackaged/main/default/objects/On_site_agreement__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <description>If the Status of the On Site Agreement is any of: Accepted, Scheduled or Complete, it is considered Converted</description>
    <formula>IF
( 
OR(TEXT(Status__c)=&#39;Complete&#39;,TEXT(Status__c)=&#39;Scheduled&#39;,TEXT(Status__c)=&#39;Accepted&#39;),
TRUE,
FALSE
)</formula>
    <inlineHelpText>If the Status of the On Site Agreement is any of: Accepted, Scheduled or Complete, it is considered Converted</inlineHelpText>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>