unpackaged/main/default/objects/On_site_agreement__c/fields/Customer_Prepared_To_Leave_Online_Review__c.field-meta.xml
<CustomField>
    <fullName>Customer_Prepared_To_Leave_Online_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Prepared To Leave Online Review</label>
    <type>Checkbox</type>
</CustomField>