unpackaged/main/default/objects/On_site_agreement__c/fields/Deposit_Payment_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Payment_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Payment Reconciled</label>
    <type>Checkbox</type>
</CustomField>