unpackaged/main/default/objects/On_site_agreement__c/fields/Deposit_received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_received__c</fullName>
    <label>Deposit received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>