unpackaged/main/default/objects/On_site_agreement__c/fields/Deposit_required__c.field-meta.xml
<CustomField>
    <fullName>Deposit_required__c</fullName>
    <label>Deposit required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>