unpackaged/main/default/objects/On_site_agreement__c/fields/Feedback_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked when Feedback email sent and to prevent Feedback email being sent twice.</description>
    <inlineHelpText>Ticked when Feedback email sent and to prevent Feedback email being sent twice.</inlineHelpText>
    <label>Feedback Email Sent</label>
    <type>Checkbox</type>
</CustomField>