unpackaged/main/default/objects/On_site_agreement__c/fields/Final_Payment_bypassed_Credit_Customer__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_bypassed_Credit_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Payment bypassed - Credit Customer</label>
    <type>Checkbox</type>
</CustomField>