unpackaged/main/default/objects/On_site_agreement__c/fields/Final_Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Notes__c</fullName>
    <label>Final Payment Notes</label>
    <type>TextArea</type>
</CustomField>