unpackaged/main/default/objects/On_site_agreement__c/fields/Final_payment_received__c.field-meta.xml
<CustomField>
    <fullName>Final_payment_received__c</fullName>
    <label>Final payment received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>