unpackaged/main/default/objects/On_site_agreement__c/fields/Final_Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Required__c</fullName>
    <formula>Fixed_total_charge_incl_VAT__c - Deposit_received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Payment Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>