unpackaged/main/default/objects/On_site_agreement__c/fields/Gas_supply_type_2__c.field-meta.xml
<CustomField>
    <fullName>Gas_supply_type_2__c</fullName>
    <label>Gas supply type (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>