unpackaged/main/default/objects/On_site_agreement__c/fields/Hourly_rate_first_trade__c.field-meta.xml
<CustomField>
    <fullName>Hourly_rate_first_trade__c</fullName>
    <label>Hourly rate first trade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>