unpackaged/main/default/objects/On_site_agreement__c/fields/Hours_of_work_required_1__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_work_required_1__c</fullName>
    <label>Hours of work required (1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>