unpackaged/main/default/objects/On_site_agreement__c/fields/INCORRECT_BOOKING_1__c.field-meta.xml
<CustomField>
    <fullName>INCORRECT_BOOKING_1__c</fullName>
    <label>INCORRECT BOOKING 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>