unpackaged/main/default/objects/On_site_agreement__c/fields/INCORRECT_PROCESSING_OF_JOB_2__c.field-meta.xml
<CustomField>
    <fullName>INCORRECT_PROCESSING_OF_JOB_2__c</fullName>
    <label>INCORRECT PROCESSING OF JOB 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>