unpackaged/main/default/objects/On_site_agreement__c/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced?</label>
    <type>Checkbox</type>
</CustomField>