unpackaged/main/default/objects/On_site_agreement__c/fields/INVOICED_DATE_TICKED__c.field-meta.xml
<CustomField>
    <fullName>INVOICED_DATE_TICKED__c</fullName>
    <label>INVOICED DATE TICKED</label>
    <type>Date</type>
</CustomField>