unpackaged/main/default/objects/On_site_agreement__c/fields/INVOICED_WHO_TICKED__c.field-meta.xml
<CustomField>
    <fullName>INVOICED_WHO_TICKED__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INVOICED WHO TICKED</label>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Site_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>