unpackaged/main/default/objects/On_site_agreement__c/fields/Is_this_a_key_account__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_key_account__c</fullName>
    <label>Is this a key account?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>