unpackaged/main/default/objects/On_site_agreement__c/fields/J_VALIDATION__c.field-meta.xml
<CustomField>
    <fullName>J_VALIDATION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>J VALIDATION</label>
    <type>Checkbox</type>
</CustomField>