unpackaged/main/default/objects/On_site_agreement__c/fields/J_VALIDATION_WHO_TICKED__c.field-meta.xml
<CustomField>
    <fullName>J_VALIDATION_WHO_TICKED__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>J VALIDATION WHO TICKED</label>
    <referenceTo>User</referenceTo>
    <relationshipName>On_Site_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>