unpackaged/main/default/objects/On_site_agreement__c/fields/Labour_charge_O2__c.field-meta.xml
<CustomField>
    <fullName>Labour_charge_O2__c</fullName>
    <label>Labour charge O2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>