unpackaged/main/default/objects/On_site_agreement__c/fields/Materials_collection_pt_name_address_New__c.field-meta.xml
<CustomField>
    <fullName>Materials_collection_pt_name_address_New__c</fullName>
    <label>Materials collection pt name &amp; address</label>
    <type>TextArea</type>
</CustomField>