unpackaged/main/default/objects/On_site_agreement__c/fields/Materials_supplied_by_Aspect_details_New__c.field-meta.xml
<CustomField>
    <fullName>Materials_supplied_by_Aspect_details_New__c</fullName>
    <label>Materials supplied by Aspect details</label>
    <type>TextArea</type>
</CustomField>