unpackaged/main/default/objects/On_site_agreement__c/fields/Materials_supplied_by_operative_detailsN__c.field-meta.xml
<CustomField>
    <fullName>Materials_supplied_by_operative_detailsN__c</fullName>
    <label>Materials supplied by operative details</label>
    <type>TextArea</type>
</CustomField>