unpackaged/main/default/objects/On_site_agreement__c/fields/Notes_for_office__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_office__c</fullName>
    <label>Notes for office</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>