unpackaged/main/default/objects/On_site_agreement__c/fields/Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>Office_Notes__c</fullName>
    <label>Office Notes</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>