unpackaged/main/default/objects/On_site_agreement__c/fields/On_site_agreement_number__c.field-meta.xml
<CustomField>
    <fullName>On_site_agreement_number__c</fullName>
    <formula>VALUE(MID(Name,FIND(&#39;-&#39;, Name)+1,(LEN(Name)-FIND(&#39;-&#39;, Name))))</formula>
    <label>On-site agreement number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>