unpackaged/main/default/objects/On_site_agreement__c/fields/Online_Booking_record__c.field-meta.xml
<CustomField>
    <fullName>Online_Booking_record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Booking record</label>
    <referenceTo>Online_Bookings__c</referenceTo>
    <relationshipLabel>On Site Agreements</relationshipLabel>
    <relationshipName>On_Site_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>