unpackaged/main/default/objects/On_site_agreement__c/fields/ONSA_Deposit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ONSA_Deposit_Date_Time__c</fullName>
    <description>The Date/Time the deposit was taken.</description>
    <inlineHelpText>The Date/Time the deposit was taken.</inlineHelpText>
    <label>ONSA Deposit Date/Time</label>
    <type>DateTime</type>
</CustomField>