unpackaged/main/default/objects/On_site_agreement__c/fields/ONSA_Final_Balance_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ONSA_Final_Balance_Date_Time__c</fullName>
    <description>The Date/Time the Final Balance was taken.</description>
    <inlineHelpText>The Date/Time the Final Balance was taken.</inlineHelpText>
    <label>ONSA Final Balance Date/Time</label>
    <type>DateTime</type>
</CustomField>