unpackaged/main/default/objects/On_site_agreement__c/fields/Operative_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Operative_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operative email sent</label>
    <type>Checkbox</type>
</CustomField>