unpackaged/main/default/objects/On_site_agreement__c/fields/OPERATIVE_INCORRECT_INPUT_1__c.field-meta.xml
<CustomField>
    <fullName>OPERATIVE_INCORRECT_INPUT_1__c</fullName>
    <label>OPERATIVE INCORRECT INPUT 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>