unpackaged/main/default/objects/On_site_agreement__c/fields/Outcome_on_submission__c.field-meta.xml
<CustomField>
    <fullName>Outcome_on_submission__c</fullName>
    <label>Outcome on submission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>