unpackaged/main/default/objects/On_site_agreement__c/fields/Payments_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Payments_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Payment Reconciled</label>
    <type>Checkbox</type>
</CustomField>