unpackaged/main/default/objects/On_site_agreement__c/fields/Pending_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Pending_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending email sent</label>
    <type>Checkbox</type>
</CustomField>