unpackaged/main/default/objects/On_site_agreement__c/fields/Power_of_1_Currency__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1_Currency__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of 1 Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>