unpackaged/main/default/objects/On_site_agreement__c/fields/Preferred_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(TEXT(Preferred_date__c) &amp; &quot; &quot; &amp; LEFT(Preferred_arrival_timeslot__c,5)&amp;&quot;:00&quot; )
/*LEFT(Preferred_arrival_timeslot__c,5)&amp;&quot;:00&quot; )-0.041666667*/</formula>
    <label>Preferred Date/Time</label>
    <type>DateTime</type>
</CustomField>