unpackaged/main/default/objects/On_site_agreement__c/fields/Previous_Allocated_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Allocated_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Allocated Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>ON_Site_Agreements_Previous_Allocated</relationshipName>
    <type>Lookup</type>
</CustomField>