unpackaged/main/default/objects/On_site_agreement__c/fields/Previous_allocated_engineer_email__c.field-meta.xml
<CustomField>
    <fullName>Previous_allocated_engineer_email__c</fullName>
    <label>Previous allocated engineer email</label>
    <type>Email</type>
</CustomField>